修改：網站的優化完整版與圖片完整放上去

--- a/design.html
+++ b/design.html
@@ -15,8 +15,11 @@
     <div class="portfolio-menu">
         <div class="portfolio-list">
             <div class="portfolio-content">
-                <a href="./index.html">
-                    <p>回首頁</p>
+                <a href="./index.html">                              
+                    <p>
+                        <i class="fa fa-arrow-left" aria-hidden="true"></i>
+                        <span>回首頁</span>
+                    </p>
                 </a>
             </div>
             <ul>
@@ -65,9 +68,18 @@
                                 </a>
                             </div>
                         </li>
+                        <li class="portfolio-develop-card portfolio-develop-card9">
+                            <h5>灣WONDER網站建置</h5>
+                            <p>003</p>
+                            <div class="portfolio-tooBar">
+                                <a href="https://www.youtube.com/watch?v=J_mERBLeuHk" target="_blank">
+                                    <i class="fa fa-link" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                        </li>
                         <li class="portfolio-develop-card portfolio-develop-card3">
                             <h5>2022虎年祝賀開發與設計</h5>
-                            <p>003</p>
+                            <p>004</p>
                             <div class="portfolio-tooBar">
                                 <a href="https://www.lcnet.com.tw/images/2022veredm/EDM_Web-2022-v2.html" target="_blank">
                                     <i class="fa fa-link" aria-hidden="true"></i>
@@ -76,7 +88,7 @@
                         </li>
                         <li class="portfolio-develop-card portfolio-develop-card4">
                             <h5>2020鼠年祝賀開發與設計</h5>
-                            <p>004</p>
+                            <p>005</p>
                             <div class="portfolio-tooBar">
                                 <a href="https://www.lcnet.com.tw/images/2020veredm/EDM_Web-2020-v2.html" target="_blank">
                                     <i class="fa fa-link" aria-hidden="true"></i>
@@ -160,7 +172,7 @@
                         <h5>公司國際版的網站</h5>
                         <p>向外擴展，公司邁向國際發展的網站，目的是希望更讓國外客戶認識我們。</p>
                     </div>
-                </div>
+                </div>            
                 <!--  -->
                 <div class="portfolio-prototype-card portfolio-prototype-card3" data-item="web">
                     <img src="image/ui/2022newyear-prototype.png" alt="">
@@ -174,9 +186,7 @@
                     <img src="image/ui/2020newyear-prototype.png" alt="">
                     <div class="portfolio-prototype-text">
                         <h5>2020年 鼠年大吉</h5>
-                        <p>是鼠年要祝福“鼠”年祝賀與期盼繼續給予支持與建議的版面設計規劃需求。
-
-                        </p>
+                        <p>是鼠年要祝福“鼠”年祝賀與期盼繼續給予支持與建議的版面設計規劃需求。</p>
                     </div>
                 </div>
                 <!--  -->
@@ -287,7 +297,7 @@
 
         </div>
         <!-- EDM版面 -->
-        <div class="portfolio-edmDesign-area section " id="menu6 ">
+        <div class="portfolio-edmDesign-area section " id="menu6">
             <div class="edmDesign-ul ">
                 <div class="edmDesign-li edmDesign-li1 ">
                     <div class="edmDesign-tooBar ">
