--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
                         <h3>簡歷｜Resume</h3>
                     </li>
                     <li data-id="menu3" class="fabb">
-                        <a href="design.html">
-                            <h3>作品集｜Portfolio</h3>
-                        </a>
+                        <h3>作品集｜Portfolio</h3>
                     </li>
                 </ul>
             </div>
@@ -73,8 +71,9 @@
                                         </tr>
                                         <tr>
                                             <td colspan="2">
-                                                <p>我是一名網頁設計師，也是前端工程師，在公司待的是RD部門，所以經常跟我們的工程師配合與學習。在過去的工作中，我運用Adobe
-                                                    XD、Figma設計Mockup、
+                                                <p>我是一名網頁設計師，也是前端工程師，在公司待的是RD部門，所以經常跟我們的工程師溝通配合與學習。</p>
+                                                <p>在過去的工作中，我運用Adobe
+                                                    XD、Figma、Zeplin設計Mockup、
                                                     Prototype討論網站與產品的介面設計，並且透過HTML與CSS搭配Javascript與jQuery來開發網站與產品的介面與功能。</p>
                                                 <p>而我也經常與行銷部門等配合運用Adobe
                                                     Illustrator、Photoshop製作平面廣告圖片、EDM電子報與SEO搜尋引擎的優化與架構調整，並且埋入Google
@@ -176,19 +175,19 @@
                                     <h4>設計</h4>
                                     <div class="resume-progress">
                                         <p>UI元件設計</p>
-                                        <progress value="90" max="100"></progress>                                      
-                                    </div>
-                                    <div class="resume-progress">
-                                        <p>網頁設計</p>
-                                        <progress value="90" max="100"></progress>                                      
-                                    </div>
-                                    <div class="resume-progress">
-                                        <p>ICON</p>
                                         <progress value="85" max="100"></progress>                                      
                                     </div>
                                     <div class="resume-progress">
-                                        <p>Banner</p>
+                                        <p>網頁設計</p>
+                                        <progress value="85" max="100"></progress>                                      
+                                    </div>
+                                    <div class="resume-progress">
+                                        <p>ICON</p>
                                         <progress value="80" max="100"></progress>                                      
+                                    </div>
+                                    <div class="resume-progress">
+                                        <p>Banner</p>
+                                        <progress value="75" max="100"></progress>                                      
                                     </div>
                                 </li>
                                 <!-- 一個卡 -->
@@ -197,19 +196,19 @@
                                     <div class="resume-progress">
                                         <p>Adobe
                                             Illustrator</p>
-                                        <progress value="90" max="100"></progress>                                      
-                                    </div>
-                                    <div class="resume-progress">
-                                        <p>Adobe Photoshop</p>
                                         <progress value="85" max="100"></progress>                                      
                                     </div>
                                     <div class="resume-progress">
+                                        <p>Adobe Photoshop</p>
+                                        <progress value="80" max="100"></progress>                                      
+                                    </div>
+                                    <div class="resume-progress">
                                         <p>Adobe XD</p>
-                                        <progress value="95" max="100"></progress>                                      
+                                        <progress value="90" max="100"></progress>                                      
                                     </div>
                                     <div class="resume-progress">
                                         <p>Figma</p>
-                                        <progress value="80" max="100"></progress>                                      
+                                        <progress value="75" max="100"></progress>                                      
                                     </div>
                                     <div class="resume-progress">
                                         <p>Zeplin</p>
@@ -218,14 +217,14 @@
                                 </li>
                                 <!-- 一個卡 -->
                                 <li class="resume-card">
-                                    <h4>網頁語言</h4>
+                                    <h4>網頁前端</h4>
                                     <div class="resume-progress">
                                         <p>HTML</p>
                                         <progress value="90" max="100"></progress>                                      
                                     </div>
                                     <div class="resume-progress">
                                         <p>CSS／SCSS</p>
-                                        <progress value="85" max="100"></progress>                                      
+                                        <progress value="90" max="100"></progress>                                      
                                     </div>
                                     <div class="resume-progress">
                                         <p>Javascript</p>
@@ -245,18 +244,63 @@
                                     </div>
                                     <div class="resume-progress">
                                         <p>SEO搜尋引擎優化</p>
-                                        <progress value="85" max="100"></progress>                                      
+                                        <progress value="80" max="100"></progress>                                      
                                     </div>
                                     <div class="resume-progress">
                                         <p>Google Analytics
                                         </p>
-                                        <progress value="65" max="100"></progress>                                      
+                                        <progress value="60" max="100"></progress>                                      
                                     </div>
                                 </li>                                                                
                             </ul>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="portfolio-design-area section" id="menu3">
+                <div class="portfolio-design-box">
+                    <div class="portfolio-design-photo" style="background-image: url('image/home/webDevelop.png');">
+                    </div>
+                    <div class="portfolio-design-list">
+                        <ul>
+                            <li class="active" data-item="develop">
+                                <a href="design.html#menu2">
+                                    <h5>開發</h5>
+                                    <p>開發網站的描述開發網站的描述</p>
+                                    <img src="image/icon/arrow-right.svg" alt="">
+                                </a>
+                            </li>
+                            <li data-item="ui">
+                                <a href="design.html#menu3">
+                                    <h5>介面設計</h5>
+                                    <p>開發網站的描述開發網站的描述</p>
+                                    <img src="image/icon/arrow-right.svg" alt="">    
+                                </a>
+                            </li>
+                            <li data-item="graphicDesign">
+                                <a href="design.html#menu4">
+                                    <h5>平面設計</h5>
+                                    <p>開發網站的描述開發網站的描述</p>
+                                    <img src="image/icon/arrow-right.svg" alt="">    
+                                </a>
+                            </li>
+                            <li data-item="edm">
+                                <a href="design.html#menu6">
+                                    <h5>電子報EDM</h5>
+                                    <p>開發網站的描述開發網站的描述</p>
+                                    <img src="image/icon/arrow-right.svg" alt="">
+                                </a>
+                            </li>
+                            <li class="portfolio-design-button">                                
+                                <a href="design.html">
+                                    <h5>看全部資訊</h5>
+                                    <p>開發網站的描述開發網站的描述</p>
+                                    <img src="image/icon/arrow-right.svg" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>                
+                </div>                
             </div>
         </div>
 
