修改:開發區塊的hover效果與部分RWD

--- a/design.html
+++ b/design.html
@@ -15,35 +15,37 @@
     <div class="portfolio-menu">
         <div class="portfolio-list">
             <div class="portfolio-content">
-                <a href="./index.html">                              
+                <a href="./index.html">
                     <p>
                         <i class="fa fa-arrow-left" aria-hidden="true"></i>
                         <span>回首頁</span>
                     </p>
                 </a>
             </div>
-            <ul>
-                <li data-id="menu2" class="fabb active">
-                    <h3>開發｜Develop</h3>
-                </li>
-                <li data-id="menu3" class="fabb">
-                    <h3>介面設計｜UI Prototype</h3>
-                </li>
-                <li data-id="menu4" class="fabb">
-                    <h3>平面設計</h3>
-                </li>
-                <!-- <li data-id="menu5" class="fabb">
-                    <h3>特殊的</h3>
-                </li> -->
-                <li data-id="menu6" class="fabb">
-                    <h3>電子報EDM</h3>
-                </li>
-            </ul>
+            <div class="portfolio-menu-content">
+                <ul>
+                    <li data-id="menu2" class="fabb active">
+                        <h3>開發｜Develop</h3>
+                    </li>
+                    <li data-id="menu3" class="fabb">
+                        <h3>介面設計｜UI Prototype</h3>
+                    </li>
+                    <li data-id="menu4" class="fabb">
+                        <h3>平面設計</h3>
+                    </li>
+                    <!-- <li data-id="menu5" class="fabb">
+                        <h3>特殊的</h3>
+                    </li> -->
+                    <li data-id="menu6" class="fabb">
+                        <h3>電子報EDM</h3>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
     <div class="portfolio-banner-background">
-        
+
         <!-- 首頁 -->
         <div class="portfolio-develop-area section" id="menu2">
             <div class="portfolio-develop-section">
@@ -172,7 +174,7 @@
                         <h5>公司國際版的網站</h5>
                         <p>向外擴展，公司邁向國際發展的網站，目的是希望更讓國外客戶認識我們。</p>
                     </div>
-                </div>            
+                </div>
                 <!--  -->
                 <div class="portfolio-prototype-card portfolio-prototype-card3" data-item="web">
                     <img src="image/ui/2022newyear-prototype.png" alt="">
