更新:經歷的更新與版面調整

--- a/index.html
+++ b/index.html
@@ -104,22 +104,34 @@
                                     <li>
                                         <div class="resume-div">
                                             <p class="resume-Title">
-                                                UI/UX 網頁設計師<br>
+                                                系統UI/UX設計＆<br>
+                                                前端開發工程師
+                                            </p>
+                                            <p class="resume-date">
+                                                2022.06 -
+                                            </p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="resume-div">
+                                            <p class="resume-Title">
+                                                UI/UX 網頁設計師＆<br>
                                                 軟體開發工程師
                                             </p>
                                             <p class="resume-date">
-                                                2016.05 -
+                                                2016.05 - 2022.05
                                             </p>
-                                            <p class="resume-content">
-                                                Lorem, ipsum dolor sit amet
-                                                consectetur adipisicing elit.
-                                                Reprehenderit sequi, quasi iste
-                                                beatae minus ad, voluptas,
-                                                ratione rerum quas suscipit
-                                                accusantium voluptatibus
-                                                delectus eum quidem ipsa veniam.
-                                                Excepturi, adipisci ducimus.
-                                            </p>
+                                            <div class="resume-content">
+                                                <p>。公司多國官網與產品的UI Prototype</p>
+                                                <p>。公司網站前端的開發與更新(含RWD)</p>
+                                                <p>。EDM電子報的版面設計與開發製作</p>
+                                                <p>。Banner設＆Icon設計製作</p>
+                                                <p>。規劃與掌握專案開發時程</p>
+                                                <p>。網站seo的優化規則邏輯</p>
+                                                <p>。Google Analytics串接</p>
+                                                <p>。軟體設計及開發、維護，使用Blazor＋C#</p>
+                                                <p>。使用Git程式碼版本控制</p>
+                                            </div>
                                         </div>
                                     </li>
                                     <li>
@@ -172,10 +184,14 @@
                             <ul>
                                 <!-- 一個卡 -->
                                 <li class="resume-card">
-                                    <h4>設計</h4>
+                                    <h4>UI/UX設計</h4>
                                     <div class="resume-progress">
-                                        <p>UI元件設計</p>
-                                        <progress value="85" max="100"></progress>                                      
+                                        <p>元件設計</p>
+                                        <progress value="90" max="100"></progress>                                      
+                                    </div>
+                                    <div class="resume-progress">
+                                        <p>Wireframe/Prototype</p>
+                                        <progress value="90" max="100"></progress>                                      
                                     </div>
                                     <div class="resume-progress">
                                         <p>網頁設計</p>
@@ -183,11 +199,11 @@
                                     </div>
                                     <div class="resume-progress">
                                         <p>ICON</p>
-                                        <progress value="80" max="100"></progress>                                      
+                                        <progress value="85" max="100"></progress>                                      
                                     </div>
                                     <div class="resume-progress">
                                         <p>Banner</p>
-                                        <progress value="75" max="100"></progress>                                      
+                                        <progress value="80" max="100"></progress>                                      
                                     </div>
                                 </li>
                                 <!-- 一個卡 -->
@@ -208,7 +224,7 @@
                                     </div>
                                     <div class="resume-progress">
                                         <p>Figma</p>
-                                        <progress value="75" max="100"></progress>                                      
+                                        <progress value="90" max="100"></progress>                                      
                                     </div>
                                     <div class="resume-progress">
                                         <p>Zeplin</p>
@@ -250,6 +266,11 @@
                                         <p>Google Analytics
                                         </p>
                                         <progress value="60" max="100"></progress>                                      
+                                    </div>
+                                    <div class="resume-progress">
+                                        <p>Google ADS版位設計
+                                        </p>
+                                        <progress value="70" max="100"></progress>                                      
                                     </div>
                                 </li>                                                                
                             </ul>
