更新:樣式跑版再優化

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     <li>
                                         <div class="resume-div">
                                             <p class="resume-Title">
-                                                系統UI/UX設計＆<br>
+                                                UI/UX 網頁設計師＆<br>
                                                 前端開發工程師
                                             </p>
                                             <p class="resume-date">
@@ -116,16 +116,16 @@
                                         <div class="resume-div">
                                             <p class="resume-Title">
                                                 UI/UX 網頁設計師＆<br>
-                                                軟體開發工程師
+                                                前端開發工程師
                                             </p>
                                             <p class="resume-date">
                                                 2016.05 - 2022.05
                                             </p>
                                             <div class="resume-content">
-                                                <p>。公司多國官網與產品的UI Prototype</p>
-                                                <p>。公司網站前端的開發與更新(含RWD)</p>
+                                                <p>。公司多國官網與產品的UI Prototype設計</p>
+                                                <p>。公司網站的開發與優化更新(含RWD)</p>
                                                 <p>。EDM電子報的版面設計與開發製作</p>
-                                                <p>。Banner設＆Icon設計製作</p>
+                                                <p>。Banner設計＆Icon設計製作</p>
                                                 <p>。規劃與掌握專案開發時程</p>
                                                 <p>。網站seo的優化規則邏輯</p>
                                                 <p>。Google Analytics串接</p>
