新增:新增作品集The F2E prototype

--- a/design.html
+++ b/design.html
@@ -83,7 +83,8 @@
                             <h5>2022虎年祝賀開發與設計</h5>
                             <p>004</p>
                             <div class="portfolio-tooBar">
-                                <a href="https://www.lcnet.com.tw/images/2022veredm/EDM_Web-2022-v2.html" target="_blank">
+                                <a href="https://www.lcnet.com.tw/images/2022veredm/EDM_Web-2022-v2.html"
+                                    target="_blank">
                                     <i class="fa fa-link" aria-hidden="true"></i>
                                 </a>
                             </div>
@@ -92,7 +93,8 @@
                             <h5>2020鼠年祝賀開發與設計</h5>
                             <p>005</p>
                             <div class="portfolio-tooBar">
-                                <a href="https://www.lcnet.com.tw/images/2020veredm/EDM_Web-2020-v2.html" target="_blank">
+                                <a href="https://www.lcnet.com.tw/images/2020veredm/EDM_Web-2020-v2.html"
+                                    target="_blank">
                                     <i class="fa fa-link" aria-hidden="true"></i>
                                 </a>
                             </div>
@@ -160,10 +162,26 @@
             </div>
             <div class="portfolio-prototype-block">
                 <!--  -->
+                <div class="portfolio-prototype-card portfolio-prototype-card11" data-item="web,mobile">
+                    <img src="image/ui/The_F2E.png" alt="">
+                    <div class="portfolio-prototype-text">
+                        <div class="portfolio-prototype-header-block">
+                            <h5>The F2E網站</h5>
+                            <a target="_blank"
+                                href="https://www.figma.com/proto/174W4lCNBL8hqO1HYM7EaC/Week-1---The-F2E-%E6%B4%BB%E5%8B%95%E7%B6%B2%E7%AB%99%E8%A8%AD%E8%A8%88?page-id=29%3A57&node-id=29%3A58&viewport=1090%2C8515%2C0.52&scaling=min-zoom&starting-point-node-id=37%3A165">
+                                <img src="image/icon/iconFigmaVector.png">
+                            </a>
+                        </div>
+                        <p>利用有點3D的視差感，搭配星球的元素設計，還有像素的字體搭配來呈現這個網頁。</p>
+                    </div>
+                </div>
+                <!--  -->
                 <div class="portfolio-prototype-card portfolio-prototype-card1" data-item="web,mobile">
                     <img src="image/ui/2021newWeb.png" alt="">
                     <div class="portfolio-prototype-text">
-                        <h5>公司新品牌網站</h5>
+                        <div class="portfolio-prototype-header-block">
+                            <h5>公司新品牌網站</h5>
+                        </div>
                         <p>公司建立了一個新的企業級系統與App，是描述一個邁向低程式碼開發的產品，因此討論網站架構與Mockup。</p>
                     </div>
                 </div>
@@ -171,7 +189,13 @@
                 <div class="portfolio-prototype-card portfolio-prototype-card2" data-item="web,mobile">
                     <img src="image/ui/2020newWeb-en.png" alt="">
                     <div class="portfolio-prototype-text">
-                        <h5>公司國際版的網站</h5>
+                        <div class="portfolio-prototype-header-block">
+                            <h5>公司國際版的網站</h5>
+                            <a target="_blank"
+                                href="https://xd.adobe.com/view/1bba2a7a-4fc8-4c33-8691-b10bd7375acf-4ee9/">
+                                <img src="image/icon/adobeXD.png">
+                            </a>
+                        </div>
                         <p>向外擴展，公司邁向國際發展的網站，目的是希望更讓國外客戶認識我們。</p>
                     </div>
                 </div>
@@ -179,7 +203,9 @@
                 <div class="portfolio-prototype-card portfolio-prototype-card3" data-item="web">
                     <img src="image/ui/2022newyear-prototype.png" alt="">
                     <div class="portfolio-prototype-text">
-                        <h5>2022年 虎躍新程</h5>
+                        <div class="portfolio-prototype-header-block">
+                            <h5>2022年 虎躍新程</h5>
+                        </div>
                         <p>是一個虎年要歲序更新，感謝大家過去一年來的鼓勵與相挺，祝福各位虎躍新程與虎哩賺大錢！的版面。</p>
                     </div>
                 </div>
@@ -187,7 +213,9 @@
                 <div class="portfolio-prototype-card portfolio-prototype-card4" data-item="web">
                     <img src="image/ui/2020newyear-prototype.png" alt="">
                     <div class="portfolio-prototype-text">
-                        <h5>2020年 鼠年大吉</h5>
+                        <div class="portfolio-prototype-header-block">
+                            <h5>2020年 鼠年大吉</h5>
+                        </div>
                         <p>是鼠年要祝福“鼠”年祝賀與期盼繼續給予支持與建議的版面設計規劃需求。</p>
                     </div>
                 </div>
@@ -195,7 +223,9 @@
                 <div class="portfolio-prototype-card portfolio-prototype-card5" data-item="web">
                     <img src="image/ui/beefnoodle.png" alt="">
                     <div class="portfolio-prototype-text">
-                        <h5>牛小棧</h5>
+                        <div class="portfolio-prototype-header-block">
+                            <h5>牛小棧</h5>
+                        </div>
                         <p>因為之前有配合賣牛肉麵的店家，想推廣跟更認識他們，所以發想創建牛肉麵的網站設計。</p>
                     </div>
                 </div>
@@ -203,7 +233,9 @@
                 <div class="portfolio-prototype-card portfolio-prototype-card6" data-item="web,mobile">
                     <img src="image/ui/2020login-reddesign.png" alt="">
                     <div class="portfolio-prototype-text">
-                        <h5>產品 login 重新設計</h5>
+                        <div class="portfolio-prototype-header-block">
+                            <h5>產品 login 重新設計</h5>
+                        </div>
                         <p>因為之前的login頁面樸素單調，因此重新設計login的版面，讓他具有美化好的現代感。</p>
                     </div>
                 </div>
@@ -211,7 +243,9 @@
                 <div class="portfolio-prototype-card portfolio-prototype-card7" data-item="web">
                     <img src="image/ui/gympool1.png" alt="">
                     <div class="portfolio-prototype-text">
-                        <h5>GYM Pool</h5>
+                        <div class="portfolio-prototype-header-block">
+                            <h5>GYM Pool</h5>
+                        </div>
                         <p>從認識的朋友身邊得知，他正在經營一個破2萬人的健身房會籍轉讓平台。因為粉絲團資訊量大，很容易被洗不同的資訊洗掉，所以才覺得要創造一個平台。</p>
                     </div>
                 </div>
@@ -219,7 +253,9 @@
                 <div class="portfolio-prototype-card portfolio-prototype-card7" data-item="software">
                     <img src="image/ui/POMODORO.png" alt="">
                     <div class="portfolio-prototype-text">
-                        <h5>番茄鐘 POMODORO</h5>
+                        <div class="portfolio-prototype-header-block">
+                            <h5>番茄鐘 POMODORO</h5>
+                        </div>
                         <p>這個是配合六角學院的活動(精神時光屋)，製作的番茄鐘UI設計。</p>
                     </div>
                 </div>
@@ -235,7 +271,9 @@
                 <div class="portfolio-prototype-card portfolio-prototype-card9" data-item="Mobile">
                     <img src="image/ui/CreditCard.png" alt="">
                     <div class="portfolio-prototype-text">
-                        <h5>信用卡結帳</h5>
+                        <div class="portfolio-prototype-header-block">
+                            <h5>信用卡結帳</h5>
+                        </div>
                         <p>這是配合Daily UI的活動。</p>
                     </div>
                 </div>
@@ -243,7 +281,9 @@
                 <div class="portfolio-prototype-card portfolio-prototype-card10" data-item="software">
                     <img src="image/ui/color-picker–1.png" alt="">
                     <div class="portfolio-prototype-text">
-                        <h5>Color Picker</h5>
+                        <div class="portfolio-prototype-header-block">
+                            <h5>Color Picker</h5>
+                        </div>
                         <p>重新設計的調色盤，因為原本的太單調，不方便使用</p>
                     </div>
                 </div>
@@ -253,7 +293,8 @@
         <!-- 平面設計 -->
         <div class="portfolio-graphicDesign-area section" id="menu4">
             <!--  -->
-            <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area1 graphicDesignSection" id="graphicDesign1" style="background: #9cc1b7;">
+            <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area1 graphicDesignSection"
+                id="graphicDesign1" style="background: #9cc1b7;">
                 <h4>2022新年賀卡（福虎賀新春）</h4>
                 <div class="portfolio-graphicDesign-descraption">
                     <p>福虎賀新春</p>
@@ -264,7 +305,8 @@
                 </div>
             </div>
             <!--  -->
-            <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area2 graphicDesignSection " id="graphicDesign2" style="background: #e3ce78; ">
+            <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area2 graphicDesignSection "
+                id="graphicDesign2" style="background: #e3ce78; ">
                 <h4>2021新年Banner</h4>
                 <div class="portfolio-graphicDesign-descraption ">
                     <p>金牛迎春、金牛報喜</p>
@@ -276,7 +318,8 @@
 
             </div>
             <!--  -->
-            <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area3 graphicDesignSection " id="graphicDesign3" style="background: #ede9e9; ">
+            <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area3 graphicDesignSection "
+                id="graphicDesign3" style="background: #ede9e9; ">
                 <h4>研討會Banner設計</h4>
                 <div class="portfolio-graphicDesign-descraption ">
                     <p>每年都有好幾場的研討會，都會需要廣告的圖，因此符合當場的活動標題與內容訂定設計 Banner 方向</p>
@@ -286,7 +329,8 @@
                 </div>
             </div>
             <!--  -->
-            <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area4 graphicDesignSection " id="graphicDesign4" style="background: #212b2e; ">
+            <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area4 graphicDesignSection "
+                id="graphicDesign4" style="background: #212b2e; ">
                 <h4>中秋節Banner設計</h4>
                 <div class="portfolio-graphicDesign-descraption ">
                     <p>祝福中秋佳節，月圓人團圓。</p>
@@ -303,7 +347,8 @@
             <div class="edmDesign-ul ">
                 <div class="edmDesign-li edmDesign-li1 ">
                     <div class="edmDesign-tooBar ">
-                        <a href="https://www.lcnet.com.tw/Tech/EDM_USfeatures202007/newWebUs_1090715.html " target="_blank ">
+                        <a href="https://www.lcnet.com.tw/Tech/EDM_USfeatures202007/newWebUs_1090715.html "
+                            target="_blank ">
                             <i class="fa fa-link " aria-hidden="true "></i>
                         </a>
                     </div>
@@ -319,7 +364,8 @@
                 </div>
                 <div class="edmDesign-li edmDesign-li3 ">
                     <div class="edmDesign-tooBar ">
-                        <a href="https://www.lcnet.com.tw/Tech/EDMtech202110/tech_1101018_EDM_All.html " target="_blank ">
+                        <a href="https://www.lcnet.com.tw/Tech/EDMtech202110/tech_1101018_EDM_All.html "
+                            target="_blank ">
                             <i class="fa fa-link " aria-hidden="true "></i>
                         </a>
                     </div>
@@ -341,7 +387,8 @@
                 </div>
                 <div class="edmDesign-li edmDesign-li6 ">
                     <div class="edmDesign-tooBar ">
-                        <a href="https://www.lcnet.com.tw/Tech/EDM_USfeatures202012/newWebUs_1091223.html " target="_blank ">
+                        <a href="https://www.lcnet.com.tw/Tech/EDM_USfeatures202012/newWebUs_1091223.html "
+                            target="_blank ">
                             <i class="fa fa-link " aria-hidden="true "></i>
                         </a>
                     </div>
